@@ -2669,7 +2669,7 @@ The user is informed that a message has been sent to the email address and that 
 <body>
 <!-- ###SUB_RECORD### -->
 <h4>###LABEL_V_DEAR###</h4>
-<p>###LABEL_V_REGISTRATION_INVITED_MESSAGE1###<br />
+<p>###LABEL_V_REGISTRATION_INVITED_MESSAGE1A###<br />
 <a href="###SETFIXED_APPROVE_URL###">###SETFIXED_APPROVE_URL###</a><br />
 ###LABEL_COPY_PASTE_LINK###</p>
 <p>###LABEL_V_REGISTRATION_INVITED_MESSAGE2###<br />
@@ -2693,7 +2693,7 @@ The user is informed that a message has been sent to the email address and that 
 
 ###LABEL_V_DEAR###
 
-###LABEL_V_REGISTRATION_INVITED_MESSAGE1###
+###LABEL_V_REGISTRATION_INVITED_MESSAGE1A###
 <###SETFIXED_APPROVE_URL###>
 ###LABEL_COPY_PASTE_LINK###
 
